--- a/index.html
+++ b/index.html
@@ -47,8 +47,16 @@
         </ul>
       </div>
       <div class="icon">
-        <i class="fa-solid fa-cart-shopping"></i>
+        <i class="fa-solid fa-cart-shopping shopping"></i>
+        <span class="quant">0</span>
         <div class="pic"><img src="./images/image-avatar.png" alt="image-avatar" /></div>
+        <div class="list"></div>
+      </div>
+      <div class="card">
+        <h1>Cart</h1>
+        <div class="checkout">
+          <div class="closeshopping">Close Cart</div>
+        </div>
       </div>
     </nav>
     <section>
@@ -80,7 +88,7 @@
           the weather can offer.
         </p>
         <div class="prices">
-          <div class="num">
+          <div class="num">  
             <p class="rp">$125.00</p> <p class="discount">50% </p>
           </div>
           <p class="fp">$250.00 </p>
@@ -88,10 +96,10 @@
         <footer>
           <div class="change">
             <i class="fa-solid fa-minus"></i>
-            <p id="quantity">0</p>
+            <p id="quantity"></p> 
             <i class="fa-solid fa-plus"></i>
           </div>
-        <button><i class="fa-solid fa-cart-shopping"></i>Add to cart</button>
+        <button class="add-to-cart-btn"><i class="fa-solid fa-cart-shopping"></i>Add to cart</button>
         </footer>
       </div>
     </section>
